--- a/src/app/summary/flight-details/flight-details.component.html
+++ b/src/app/summary/flight-details/flight-details.component.html
@@ -1,10 +1,11 @@
 <div class="card-container d-flex flex-wrap justify-content-between">
-  <mat-card class="col-5">
-    <mat-card-content>
-      <h2>From {{ oneWayFlight?.from }} To {{ oneWayFlight?.to }}</h2>
-      <p>{{ oneWayFlight?.date }} {{ oneWayFlight?.date }}</p>
+  <mat-card class="col-xl-5">
+    <mat-card-content *ngIf="oneWayFlight">
+      <h2>From {{ oneWayFlight.from }} To {{ oneWayFlight.to }}</h2>
+      <p>{{ oneWayFlight.date }} {{ timeOfLanding(oneWayFlight) }}</p>
 
-      <div *ngFor="let passenger of flightDetails.adult; let i = index">
+      <div *ngFor="let passenger of flightDetails.passengers
+      .adult; let i = index">
         <hr />
         <h2>{{ passenger.name }} - {{ passenger.surname }}</h2>
         <hr />
@@ -15,7 +16,8 @@
           <li>Seat 1{{ i }}D</li>
         </ul>
       </div>
-      <div *ngFor="let passenger of flightDetails.child; let i = index">
+      <div *ngFor="let passenger of flightDetails.passengers
+      .child; let i = index">
         <hr />
         <h2>{{ passenger.name }} - {{ passenger.surname }}</h2>
         <hr />
@@ -26,7 +28,8 @@
           <li>Seat 1{{ i }}F</li>
         </ul>
       </div>
-      <div *ngFor="let passenger of flightDetails.infant; let i = index">
+      <div *ngFor="let passenger of flightDetails.passengers
+      .infant; let i = index">
         <hr />
         <h2>{{ passenger.name }} - {{ passenger.surname }}</h2>
         <hr />
@@ -39,12 +42,13 @@
       </div>
     </mat-card-content>
   </mat-card>
-  <mat-card *ngIf="backFlight" class="col-5">
+  <mat-card *ngIf="backFlight" class="col-xl-5">
     <mat-card-content>
       <h2>From {{ backFlight.from }} To {{ backFlight.to }}</h2>
-      <p>{{ backFlight.date }} {{ backFlight.date }}</p>
+      <p>{{ backFlight.date }} {{ timeOfLanding(backFlight) }}</p>
 
-      <div *ngFor="let passenger of flightDetails.adult; let i = index">
+      <div *ngFor="let passenger of flightDetails.passengers
+      .adult; let i = index">
         <hr />
         <h2>{{ passenger.name }} - {{ passenger.surname }}</h2>
         <hr />
@@ -55,7 +59,8 @@
           <li>Seat 1{{ i }}D</li>
         </ul>
       </div>
-      <div *ngFor="let passenger of flightDetails.child; let i = index">
+      <div *ngFor="let passenger of flightDetails.passengers
+      .child; let i = index">
         <hr />
         <h2>{{ passenger.name }} - {{ passenger.surname }}</h2>
         <hr />
@@ -66,7 +71,8 @@
           <li>Seat 1{{ i }}F</li>
         </ul>
       </div>
-      <div *ngFor="let passenger of flightDetails.infant; let i = index">
+      <div *ngFor="let passenger of flightDetails.passengers
+      .infant; let i = index">
         <hr />
         <h2>{{ passenger.name }} - {{ passenger.surname }}</h2>
         <hr />
