fix total price

--- a/src/app/summary/flight-fare/flight-fare.component.html
+++ b/src/app/summary/flight-fare/flight-fare.component.html
@@ -1,93 +1,105 @@
-<div class="container-bill d-flex justify-content-between  m-2">
+<div class="container-bill d-flex justify-content-between m-t-4">
   <div class="card col-xl-5" *ngIf="oneWayFlight">
     <div *ngFor="let passanger of flightDetails.passengers.adult">
       <div class="card-body">
-        <h5 class="card-title">
-          Adult Fare
-        </h5>
-        <p class="card-text">fare: {{ oneWayFlight.cost - oneWayFlight.cost*0.2 }}</p>
+        <h5 class="card-title">Adult Fare</h5>
         <p class="card-text">
-          Tax and Service Charge: {{ oneWayFlight.cost*0.2 }}
+          fare: {{ oneWayFlight.cost - oneWayFlight.cost * 0.2 }}
         </p>
-        <p class="card-text">Total Price: {{ oneWayFlight.cost }}</p>
+        <p class="card-text">
+          Tax and Service Charge: {{ oneWayFlight.cost * 0.2 }}
+        </p>
+        <p class="card-text">
+          Total Price:
+          <span class="price__Ticket">{{ oneWayFlight.cost }}</span>
+        </p>
       </div>
     </div>
     <hr />
     <div *ngFor="let passanger of flightDetails.passengers.child">
       <div class="card-body">
-        <h5 class="card-title">
-          Child Fare
-        </h5>
-        <p class="card-text">fare: {{ oneWayFlight.cost - oneWayFlight.cost*0.2 }}</p>
+        <h5 class="card-title">Child Fare</h5>
         <p class="card-text">
-          Tax and Service Charge: {{ oneWayFlight.cost*0.2 }}
+          fare: {{ oneWayFlight.cost - oneWayFlight.cost * 0.2 }}
         </p>
-        <p class="card-text">Total Price: {{ oneWayFlight.cost }}</p>
+        <p class="card-text">
+          Tax and Service Charge: {{ oneWayFlight.cost * 0.2 }}
+        </p>
+        <p class="card-text">
+          Total Price:
+          <span class="price__Ticket">{{ oneWayFlight.cost }}</span>
+        </p>
       </div>
     </div>
     <hr />
     <div *ngFor="let passanger of flightDetails.passengers.infant">
       <div class="card-body">
-        <h5 class="card-title">
-          Infant Fare
-        </h5>
-        <p class="card-text">fare: {{ oneWayFlight.cost - oneWayFlight.cost*0.2 }}</p>
+        <h5 class="card-title">Infant Fare</h5>
         <p class="card-text">
-          Tax and Service Charge: {{ oneWayFlight.cost*0.2 }}
+          fare: {{ oneWayFlight.cost - oneWayFlight.cost * 0.2 }}
         </p>
-        <p class="card-text">Total Price: {{ oneWayFlight.cost }}</p>
+        <p class="card-text">
+          Tax and Service Charge: {{ oneWayFlight.cost * 0.2 }}
+        </p>
+        <p class="card-text">
+          Total Price:
+          <span class="price__Ticket">{{ oneWayFlight.cost }}</span>
+        </p>
       </div>
     </div>
     <hr />
-    
   </div>
   <div class="card col-xl-5" *ngIf="backFlight">
     <div *ngFor="let passanger of flightDetails.passengers.adult">
       <div class="card-body">
-        <h5 class="card-title">
-          Adult Fare
-        </h5>
-        <p class="card-text">fare: {{ backFlight.cost - backFlight.cost*0.2 }}</p>
+        <h5 class="card-title">Adult Fare</h5>
         <p class="card-text">
-          Tax and Service Charge: {{ backFlight.cost*0.2 }}
+          fare: {{ backFlight.cost - backFlight.cost * 0.2 }}
         </p>
-        <p class="card-text">Total Price: {{ backFlight.cost }}</p>
+        <p class="card-text">
+          Tax and Service Charge: {{ backFlight.cost * 0.2 }}
+        </p>
+        <p class="card-text">
+          Total Price: <span class="price__Ticket">{{ backFlight.cost }}</span>
+        </p>
       </div>
     </div>
     <hr />
     <div *ngFor="let passanger of flightDetails.passengers.child">
       <div class="card-body">
-        <h5 class="card-title">
-          Adult Fare
-        </h5>
-        <p class="card-text">fare: {{ backFlight.cost - backFlight.cost*0.2 }}</p>
+        <h5 class="card-title">Child Fare</h5>
         <p class="card-text">
-          Tax and Service Charge: {{ backFlight.cost*0.2 }}
+          fare: {{ backFlight.cost - backFlight.cost * 0.2 }}
         </p>
-        <p class="card-text">Total Price: {{ backFlight.cost }}</p>
+        <p class="card-text">
+          Tax and Service Charge: {{ backFlight.cost * 0.2 }}
+        </p>
+        <p class="card-text">
+          Total Price: <span class="price__Ticket">{{ backFlight.cost }}</span>
+        </p>
       </div>
     </div>
     <hr />
     <div *ngFor="let passanger of flightDetails.passengers.infant">
       <div class="card-body">
-        <h5 class="card-title">
-          Adult Fare
-        </h5>
-        <p class="card-text">fare: {{ backFlight.cost - backFlight.cost*0.2 }}</p>
+        <h5 class="card-title">Infant Fare</h5>
         <p class="card-text">
-          Tax and Service Charge: {{ backFlight.cost*0.2 }}
+          fare: {{ backFlight.cost - backFlight.cost * 0.2 }}
         </p>
-        <p class="card-text">Total Price: {{ backFlight.cost }}</p>
+        <p class="card-text">
+          Tax and Service Charge: {{ backFlight.cost * 0.2 }}
+        </p>
+        <p class="card-text">
+          Total Price: <span class="price__Ticket">{{ backFlight.cost }}</span>
+        </p>
       </div>
     </div>
     <hr />
-   
   </div>
-  <br>
 </div>
-<hr>
+<hr />
 <div class="d-flex justify-content-between p-2">
-  <br>
+  <br />
   <p class="text-end">total:</p>
-  <p class="text-end"> {{ totalPrice() }}</p>
+  <p class="text-end">{{ totalPrice() }}</p>
 </div>
