minor fixes to summary data

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -20,7 +20,7 @@
           id="navbarSupportedContent"
         >
           <div class="nav-content m-2">
-            <a class="nav-link" routerLink="/Home" style="cursor: pointer"
+            <a class="nav-link" routerLink="/" style="cursor: pointer"
               ><img src="../../../assets/logo.png" alt="logo"
             /></a>
           </div>
