add edit component for booking

--- a/src/app/booking/booking-view/booking-view.component.html
+++ b/src/app/booking/booking-view/booking-view.component.html
@@ -1,3 +1,4 @@
 <app-flights-search-input></app-flights-search-input>
+<app-booking-edit></app-booking-edit>
 <app-flights-search-result></app-flights-search-result>
 <app-authentication-form-container></app-authentication-form-container>
