--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="header">
   <nav
     class="d-flex justify-content-center navbar navbar-expand-lg bg-body-tertiary"
   >
@@ -26,6 +26,7 @@
           </div>
 
           <br />
+
           <div class="d-flex flex-lg-row flex-column align-items-center">
             <a class="nav-link" href="">Book flights</a>
             <mat-form-field class="m-4" appearance="fill">
@@ -54,7 +55,7 @@
             </mat-form-field>
 
             <div class="nav-item">
-              <a
+              <!-- <button
                 style="height: 40px; width: 100px; cursor: pointer"
                 class="nav-link btn btn-success d-flex align-items-center justify-content-center"
                 (click)="handleLog()"
@@ -62,17 +63,28 @@
                 <span
                   ><img src="../../../assets/log-in.png" alt="log-in"
                 /></span>
-                {{ userState.loggedIn ? "Log Out" : "Sign In" }}</a
-              >
+                {{
+                  !userState.loggedIn ? "Sign In" : userState.userLocal.email
+                }}
+              </button> -->
+              <button mat-button (click)="handleLog()">
+                <mat-icon>person_outline</mat-icon>
+                {{
+                  !userState.loggedIn ? "Sign In" : userState.userLocal.email
+                }}
+              </button>
             </div>
+
             <div class="nav-item m-2">
-              <a
+              <!-- <button
                 style="height: 40px; width: 100px"
-                href=""
                 class="nav-link btn btn-success d-flex align-items-center justify-content-center"
               >
-                <img src="../../../assets/shopping_basket.png" alt="basket"
-              /></a>
+                <img src="../../../assets/shopping_basket.png" alt="basket" />
+              </button> -->
+              <button mat-button>
+                <mat-icon>shopping_basket</mat-icon>
+              </button>
             </div>
           </div>
           <app-progress-bar class="m-auto"></app-progress-bar>
