--- a/src/app/summary/summary-view/summary-view.component.html
+++ b/src/app/summary/summary-view/summary-view.component.html
@@ -15,9 +15,9 @@
     <div
       class="buttons col-6 d-flex justify-content-between align-items-center"
     >
-      <a href="" class="link">back</a>
-      <a href="" class="btn btn-light">Add to order cart</a>
-      <a href="" class="btn btn-primary">Buy now</a>
+      <button class="link" (click)="goBack()">back</button>
+      <button class="btn btn-light">Add to order cart</button>
+      <button class="btn btn-primary">Buy now</button>
     </div>
   </div>
 </div>
