fix: add lazy routing for cart view

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -82,7 +82,7 @@
               >
                 <img src="../../../assets/shopping_basket.png" alt="basket" />
               </button> -->
-              <button mat-button>
+              <button mat-button (click)="goToCart()">
                 <mat-icon>shopping_basket</mat-icon>
               </button>
             </div>
