--- a/src/app/summary/components/passanger-info/passanger-info.component.html
+++ b/src/app/summary/components/passanger-info/passanger-info.component.html
@@ -5,9 +5,8 @@
         <h2>{{passangerType}}: {{ passenger.name }} - {{ passenger.surname }}</h2>
         <hr />
         <ul>
-          <li>1checked bag (total 23 kg) included</li>
-          <li>1 cabin bag + 1 personal item (max. 8 kg) included</li>
-          <li>1 cabin bag + 1 personal item (max. 8 kg) included</li>
+          <li *ngIf="passenger.baggage">{{ passenger.baggage }} checked bag (total 23 kg) included</li>
+          <li *ngIf="!passenger.baggage">1 cabin bag + 1 personal item (max. 8 kg) included</li>
           <li>Seat 1{{ i }}D</li>
         </ul>
       </div>
