--- a/src/app/summary/summary-view/summary-view.component.html
+++ b/src/app/summary/summary-view/summary-view.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h2>Summary</h2>
-  <!-- <app-flight-details
+  <app-flight-details
     [oneWayFlight]="oneWayFlight"
     [backFlight]="backFlight"
     [flightDetails]="passangersInfo"
@@ -9,7 +9,7 @@
     [oneWayFlight]="oneWayFlight"
     [backFlight]="backFlight"
     [flightDetails]="passangersInfo"
-  ></app-flight-fare> -->
+  ></app-flight-fare>
   <br />
   <div class="d-flex justify-content-end">
     <div
