--- a/src/app/passengers/components/passenger-each/passenger-each.component.html
+++ b/src/app/passengers/components/passenger-each/passenger-each.component.html
@@ -58,8 +58,16 @@
 
       <hr />
     </div>
-    <mat-slide-toggle formControlName="specialNeeds"
+    <div class="d-flex justify-content-between align-items-center flex-wrap">
+    <mat-slide-toggle class="" formControlName="specialNeeds"
       >Need speciale assistance?</mat-slide-toggle
     >
+    <div *ngIf="passType !== 'infant'" class="input-group d-flex align-items-center">
+      <mat-hint style=" margin-right: 10px;">Amount Of Baggage </mat-hint>
+      <input type="button" value="-" class="button-minus " (click)="decrement()" data-field="quantity">
+      <input formControlName="baggage" type="number" step="1" max="5" value="1" name="quantity" class="quantity-field" #quantityInput readonly>
+      <input type="button" value="+" class="button-plus" (click)="increment()" data-field="quantity">
+    </div>
+  </div>
   </div>
 </div>
