--- a/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.html
+++ b/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.html
@@ -1,75 +1,80 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <ng-container matColumnDef="select">
-    <th mat-header-cell *matHeaderCellDef>
-      <mat-checkbox
-        (change)="$event ? toggleAllRows() : null"
-        [checked]="selection.hasValue() && isAllSelected()"
-        [indeterminate]="selection.hasValue() && !isAllSelected()"
-        [aria-label]="checkboxLabel()"
-      >
-      </mat-checkbox>
-    </th>
-    <td mat-cell *matCellDef="let row">
-      <mat-checkbox
-        (click)="$event.stopPropagation()"
-        (change)="$event ? selection.toggle(row) : null"
-        [checked]="selection.isSelected(row)"
-        [aria-label]="checkboxLabel(row)"
-      >
-      </mat-checkbox>
-    </td>
-  </ng-container>
-  <ng-container
-    *ngFor="let column of displayedColumns.slice(1, -1)"
-    [matColumnDef]="column"
-  >
-    <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-    <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
-  </ng-container>
-  <ng-container matColumnDef="edit">
-    <th mat-header-cell *matHeaderCellDef>edit</th>
-    <td
-      class="d-flex align-items-center"
-      mat-cell
-      *matCellDef="let element"
-      style="width: auto"
+<div class="container">
+  <!-- <p>{{ id }}</p>
+  <p>{{ isUserMode }}</p>
+  <p>{{ reservations | json }}</p> -->
+
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="select">
+      <th mat-header-cell *matHeaderCellDef>
+        <mat-checkbox
+          (change)="$event ? toggleAllRows() : null"
+          [checked]="selection.hasValue() && isAllSelected()"
+          [indeterminate]="selection.hasValue() && !isAllSelected()"
+          [aria-label]="checkboxLabel()"
+        >
+        </mat-checkbox>
+      </th>
+      <td mat-cell *matCellDef="let row">
+        <mat-checkbox
+          (click)="$event.stopPropagation()"
+          (change)="$event ? selection.toggle(row) : null"
+          [checked]="selection.isSelected(row)"
+          [aria-label]="checkboxLabel(row)"
+        >
+        </mat-checkbox>
+      </td>
+    </ng-container>
+    <ng-container
+      *ngFor="let column of displayedColumns.slice(1, -1)"
+      [matColumnDef]="column"
     >
-      <div class="m-2">
-        <!-- <img
-          style="cursor: pointer"
-          src="../../../../assets/dots.png"
-          alt=""
-          (click)="onEditDelete($event, element)"
-        /> -->
-        <button mat-icon-button (click)="onEditDelete($event, element)">
-          <mat-icon>more_vert</mat-icon>
-        </button>
-      </div>
-      <div *ngIf="element.showButtons">
-        <button class="btn btn-primary m-2" (click)="onEdit(element)">
-          edit
-        </button>
-        <button class="btn btn-danger" (click)="onDelete(element)">
-          delete
-        </button>
-      </div>
-    </td>
-  </ng-container>
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr
-    mat-row
-    *matRowDef="let row; columns: displayedColumns"
-    (click)="selection.toggle(row)"
-  ></tr>
-</table>
-<br />
-<div>
-  <div class="d-flex justify-content-between">
-    <button class="btn">+ Add new trip</button>
-    <span>total:</span>
-  </div>
-  <div class="d-flex justify-content-end align-items-center">
-    <span class="m-4">2 selected </span>
-    <button class="btn btn-primary">Payment</button>
+      <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
+      <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
+    </ng-container>
+    <ng-container matColumnDef="edit">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td
+        class="d-flex align-items-center"
+        mat-cell
+        *matCellDef="let element"
+        style="width: auto"
+      >
+        <div class="m-2" *ngIf="!isUserMode">
+          <button mat-icon-button [mat-menu-trigger-for]="menu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+        </div>
+        <mat-menu #menu>
+          <button mat-menu-item (click)="onDelete(element)">Delete</button>
+          <button mat-menu-item (click)="onEdit(element)">Edit</button>
+        </mat-menu>
+
+        <!-- <div *ngIf="element.showButtons">
+          <button class="btn btn-primary m-2" (click)="onEdit(element)">
+            edit
+          </button>
+          <button class="btn btn-danger" (click)="onDelete(element)">
+            delete
+          </button>
+        </div> -->
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr
+      mat-row
+      *matRowDef="let row; columns: displayedColumns"
+      (click)="selection.toggle(row)"
+    ></tr>
+  </table>
+  <br />
+  <div>
+    <div class="d-flex justify-content-between">
+      <button class="btn">+ Add new trip</button>
+      <span>total:</span>
+    </div>
+    <div class="d-flex justify-content-end align-items-center">
+      <span class="m-4">2 selected </span>
+      <button class="btn btn-primary">Payment</button>
+    </div>
   </div>
 </div>
