--- a/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.html
+++ b/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.html
@@ -2,7 +2,7 @@
   <!-- <p>{{ id }}</p>
   <p>{{ isUserMode }}</p>
   <p>{{ reservations | json }}</p> -->
-
+  <!-- <p>{{ reservations | json }}</p> -->
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="select">
       <th mat-header-cell *matHeaderCellDef>
@@ -29,7 +29,7 @@
       [matColumnDef]="column"
     >
       <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-      <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
+      <td style="white-space: pre;" mat-cell *matCellDef="let element">{{ element[column] }}</td>
     </ng-container>
     <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef></th>
@@ -37,7 +37,7 @@
         class="d-flex align-items-center"
         mat-cell
         *matCellDef="let element"
-        style="width: auto"
+        style="width: auto; "
       >
         <div class="m-2" *ngIf="!isUserMode">
           <button mat-icon-button [mat-menu-trigger-for]="menu">
