add fixed header

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,24 @@
-.fixed{
+.abs {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-}
+    z-index: 12; /* Adjust the z-index value as needed */
+  }
+  
+  .wrapper {
+    padding-top: 180px;
+    position: relative;
+  }
+  
+  .content {
+    position: relative;
+    z-index: 1; /* Adjust the z-index value as needed */
+  }
+  
+  @media only screen and (max-width: 991px) {
+    .wrapper {
+      padding-top: 50px;
+    }
+  }
+  
