--- a/src/app/passengers/passengers-view/passengers-view.component.html
+++ b/src/app/passengers/passengers-view/passengers-view.component.html
@@ -43,7 +43,7 @@
 
   <p>{{ passengersForm.value | json }}/p></p>
 
-  <div class="row justify-content-end text-center">
+  <div style="padding-top: 20px;" class="row justify-content-end text-center">
     <a style="width: 80px" routerLink=".." class="btn btn-warning me-3">back</a>
     <button
       [disabled]="passengersForm.invalid"
