--- a/src/app/summary/summary-view/summary-view.component.html
+++ b/src/app/summary/summary-view/summary-view.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div style="padding-top: 20px;" class="container">
   <h2>Summary</h2>
   <app-flight-details
     [oneWayFlight]="oneWayFlight"
