--- a/src/app/booking/components/flights-search-input/flights-search-input.component.html
+++ b/src/app/booking/components/flights-search-input/flights-search-input.component.html
@@ -1,4 +1,4 @@
-<div class="container-md d-flex">
+<div style="padding-top: 20px;" class="container-md d-flex">
   <span>starting point</span>
   <span><img src="../../../assets/flightPath.png" alt="plane" /></span>
   <div>
