--- a/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.html
+++ b/src/app/shopping-cart/components/shopping-cart-table/shopping-cart-table.component.html
@@ -29,7 +29,9 @@
       [matColumnDef]="column"
     >
       <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-      <td style="white-space: pre;" mat-cell *matCellDef="let element">{{ element[column] }}</td>
+      <td style="white-space: pre" mat-cell *matCellDef="let element">
+        {{ element[column] }}
+      </td>
     </ng-container>
     <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef></th>
@@ -37,7 +39,7 @@
         class="d-flex align-items-center"
         mat-cell
         *matCellDef="let element"
-        style="width: auto; "
+        style="width: auto"
       >
         <div class="m-2" *ngIf="!isUserMode">
           <button mat-icon-button [mat-menu-trigger-for]="menu">
@@ -60,12 +62,12 @@
   <br />
   <div>
     <div class="d-flex justify-content-between">
-      <button class="btn">+ Add new trip</button>
+      <button type="button" class="btn">+ Add new trip</button>
       <span>total:</span>
     </div>
     <div class="d-flex justify-content-end align-items-center">
       <span class="m-4">2 selected </span>
-      <button class="btn btn-primary">Payment</button>
+      <button type="button" class="btn btn-primary">Payment</button>
     </div>
   </div>
 </div>
