--- a/src/app/main-page/components/flights-form/flights-form.component.html
+++ b/src/app/main-page/components/flights-form/flights-form.component.html
@@ -23,8 +23,8 @@
       [class.col-sm-6]="!isEdit"
       appearance="fill"
     >
-      <mat-label>From</mat-label>
-      <mat-select formControlName="from">
+      <mat-label for="destinationFrom">From</mat-label>
+      <mat-select id="destinationFrom" formControlName="from">
         <mat-option *ngFor="let city of cities" [value]="city">
           {{ city }}
         </mat-option>
@@ -43,12 +43,13 @@
     </button>
 
     <mat-form-field
+      for="destinationTo"
       class="mx-md-2"
       [class.col-sm-6]="!isEdit"
       appearance="fill"
     >
-      <mat-label>Destination</mat-label>
-      <mat-select formControlName="to">
+      <mat-label for="destinationTo">Destination</mat-label>
+      <mat-select id="destinationTo" formControlName="to">
         <mat-option *ngFor="let city of cities" [value]="city">
           {{ city }}
         </mat-option>
@@ -61,10 +62,14 @@
     <div class="row">
       <div class="col-sm-7 d-flex justify-content-center">
         <mat-form-field appearance="fill">
-          <mat-label>Choose a Date</mat-label>
-          <mat-date-range-input formGroupName="date" [rangePicker]="picker">
-            <input matStartDate formControlName="startDate" />
-            <input matEndDate formControlName="endDate" />
+          <mat-label for="dateRange">Choose a Date</mat-label>
+          <mat-date-range-input
+            formGroupName="date"
+            [rangePicker]="picker"
+            id="dateRange"
+          >
+            <input id="dateStart" matStartDate formControlName="startDate" />
+            <input id="dateEnd" matEndDate formControlName="endDate" />
           </mat-date-range-input>
           <mat-hint
             >{{ headState.dateFormat }} - {{ headState.dateFormat }}</mat-hint
@@ -79,8 +84,8 @@
 
       <div class="col-sm-5 d-flex justify-content-center">
         <mat-form-field class="" appearance="fill">
-          <mat-label>Passangers List</mat-label>
-          <mat-select>
+          <mat-label for="passangers">Passangers List</mat-label>
+          <mat-select id="passangers">
             <mat-option *ngFor="let value of keys" [value]="value">
               {{ toCamelCase(value) }}
               <div class="option-controls">
